--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   intl: ^0.19.0
+  http: ^1.2.1
+  shared_preferences: ^2.2.3 
 
   cupertino_icons: ^1.0.2
 
